# MathModels

./: .gitignore  README.md  prompt.md
.github/workflows/: deploy-pages.yml
math-model-app/: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  smoke-pinch.cjs  tsconfig.json  vite.config.ts
math-model-app/i18n-source/: models.en.json
math-model-app/src/: App.tsx  index.css  main.tsx
math-model-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
math-model-app/src-tauri/icons/: README.md  icon.icns
math-model-app/src-tauri/src/: main.rs
math-model-app/src/components/common/: ErrorBoundary.tsx  Katex.tsx  ViewSettings.tsx
math-model-app/src/components/controls/: ParameterSlider.tsx  ResetButton.tsx  ToggleControl.tsx
math-model-app/src/components/graph2d/: AsymptoteLayer.tsx  CoordinateGrid.tsx  FunctionGraph.tsx  MarkerLayer.tsx  TwoDGraphViewer.tsx  projection.ts
math-model-app/src/components/graph3d/: DimensionLabels.tsx  SolidControls.tsx  (+3 more)
math-model-app/src/hooks/: useElementSize.ts  useFavorites.ts  useModelParameters.ts  useResponsiveLayout.ts  useTheme.ts
math-model-app/src/i18n/: LanguageContext.tsx  graphLabels.ts  languages.ts  localizeModel.ts  search.ts  types.ts
math-model-app/src/math/: conicUtils.ts  formulas.ts  geometryUtils.ts  graphUtils.ts  solidParts.ts
math-model-app/src/models/: combinedSolidModels.ts  functionModels.ts  index.ts  planeCurveModels.ts  solidGeometryModels.ts
math-model-app/src/types/: model.ts
math-model-app/src/utils/: formatFormula.ts  numberFormat.ts
(+61 files in other folders)
